--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@ body {
   padding: 0;
 }
 
-.scroller {
+#thesvg {
+  width: 100%;
+}
+
+/* .scroller {
   height: 900px;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
@@ -15,12 +19,13 @@ body {
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 2;
 }
 
 .scroller section {
   scroll-snap-align: start;
-  background-color: red;
-  opacity: 0;
+  position: relative;
+  z-index: 3;
   outline: 3px dashed orange;
   height: 900px;
   width: 100%;
@@ -40,6 +45,104 @@ body {
 
 .scroller #boble9 {
   scroll-snap-align: start;
+} */
+
+/* MODAL VINDUE */
+
+#modal,
+#modal3,
+#modal4 {
+  width: 600px;
+  height: 400px;
+  z-index: 19;
+  text-align: center;
+  position: absolute;
+  display: none;
+  top: 400px;
+  left: 850px;
+  background-color: white;
+  transition: 1s;
+  pointer-events: none;
+}
+
+#modal5 {
+  width: 600px;
+  height: 400px;
+  z-index: 19;
+  text-align: center;
+  position: absolute;
+  display: none;
+  top: 1140px;
+  left: 850px;
+  background-color: white;
+  transition: 1s;
+  pointer-events: none;
+}
+
+#modal p,
+#modal3 p,
+#modal4 p,
+#modal5 p {
+  font-size: 2em;
+  width: 98%;
+  margin: 0 auto;
+  margin-top: 70px;
+}
+
+/* #modal3 p,
+#modal4 p {
+  font-size: 2em;
+  width: 98%;
+  margin: 0 auto;
+  margin-top: 70px;
+}
+ */
+.hval,
+.hval3,
+.hval4,
+.hval5 {
+  background-image: url(hval-01.svg);
+  background-size: 100% 100%;
+  position: absolute;
+  z-index: 300;
+  width: 100%;
+  height: 100%;
+  transform: scale(0.7);
+  top: 60px;
+}
+
+#krydsknap {
+  float: right;
+  border: none;
+  background-color: transparent;
+  font-size: 2.2em;
+}
+
+#modal.vis,
+#modal3.vis3,
+#modal4.vis4,
+#modal5.vis5 {
+  display: block;
+  transition: 0.5s;
+  pointer-events: all;
+}
+
+#booble2:hover {
+  stroke: red;
+}
+
+#booble2,
+#boble3,
+#boble4,
+#boble5,
+#boble6,
+#boble7,
+#boble8,
+#boble9,
+#boble10,
+#boble11,
+#bobble {
+  cursor: pointer;
 }
 
 /* #skyer {
@@ -67,13 +170,13 @@ body {
   z-index: 10;
 }
 
-@keyframes lillewa {
-  from {
+@keyframes lillewave {
+  0% {
     transform: translateX(0px);
   }
 
-  to {
-    transform: translateX(800px);
+  100% {
+    transform: translateX(20px);
   }
 }
 
@@ -82,23 +185,33 @@ body {
   animation-name: suppe;
   animation-duration: 15s;
   animation-iteration-count: infinite;
-  z-index: 4;
+  z-index: 18;
 }
 
-@keyframes sue {
-  from {
-    transform: translateX(-0px);
+@keyframes suppe {
+  0% {
+    transform: translateX(-200px);
   }
 
-  to {
-    transform: translateX(1500px);
+  50% {
+    transform: translateX(100px);
   }
+
+  100% {
+    transform: translateX(-200px);
+  }
+}
+
+#havet {
+  position: absolute;
+  z-index: 1;
 }
 
 #faldeneplastik {
   animation-name: flaske;
   animation-duration: 45s;
   animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 
 @keyframes flaske {
@@ -109,4 +222,135 @@ body {
   to {
     transform: translateY(2150px);
   }
+}
+
+#stråle4,
+#stråle2 {
+  animation-name: stråle4;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes stråle4 {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0.5;
+  }
+}
+
+#stråle1,
+#stråle3 {
+  animation-name: stråle3;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-delay: 2s;
+}
+
+@keyframes stråle3 {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0.5;
+  }
+}
+
+#bobble {
+  animation-name: inf;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes info {
+  from {
+    transform: translateX(0px);
+    transform: scale(1);
+  }
+
+  to {
+    transform: translateX(0px);
+    transform: scale(1.1);
+  }
+}
+
+#sprutte {
+  animation-name: sprutte;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes sprutte {
+  0% {
+    transform: translateX(-100px) translateY(10px);
+  }
+
+  25% {
+    transform: translateY(120px) translateX(50px);
+  }
+
+  50% {
+    transform: translateY(220px) translateX(-100px);
+  }
+
+  75% {
+    transform: translateY(-20px) translateX(100px);
+  }
+
+  100% {
+    transform: translateY(10px) translateX(-100px);
+  }
+}
+
+#fisk3 {
+  animation-name: fiske;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes fiske {
+  0% {
+    transform: translateX(-1050px) translateY(10px);
+  }
+  100% {
+    transform: translateX(1000px);
+  }
+
+  /* 25% {
+    transform: translateY(220px) translateX(10px);
+  }
+
+  50% {
+    transform: translateY(-20px) translateX(30px);
+  }
+
+  75% {
+    transform: translateY(220px) translateX(700px);
+  }
+
+  100% {
+    transform: translateY(10px) translateX(900px);
+  } */
+}
+
+i {
+  position: absolute;
+  top: 800px;
+  left: 800px;
+  font-size: 50px;
+  color: white;
+}
+
+#pil {
+  position: absolute;
+  top: 1700px;
+  left: 800px;
+  font-size: 50px;
+  color: white;
 }
