--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
   width: 100%;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* .scroller {
   height: 900px;
   overflow-y: scroll;
@@ -51,7 +55,8 @@ body {
 
 #modal,
 #modal3,
-#modal4 {
+#modal4,
+#modal_info {
   width: 600px;
   height: 400px;
   z-index: 19;
@@ -59,13 +64,16 @@ body {
   position: absolute;
   display: none;
   top: 400px;
-  left: 850px;
+  left: 55%;
   background-color: white;
   transition: 1s;
   pointer-events: none;
 }
 
-#modal5 {
+#modal5,
+#modal6,
+#modal7,
+#modal8 {
   width: 600px;
   height: 400px;
   z-index: 19;
@@ -73,7 +81,23 @@ body {
   position: absolute;
   display: none;
   top: 1140px;
-  left: 850px;
+  left: 55%;
+  background-color: white;
+  transition: 1s;
+  pointer-events: none;
+}
+
+#modal9,
+#modal10,
+#modal11 {
+  width: 600px;
+  height: 400px;
+  z-index: 19;
+  text-align: center;
+  position: absolute;
+  display: none;
+  top: 1940px;
+  left: 55%;
   background-color: white;
   transition: 1s;
   pointer-events: none;
@@ -82,9 +106,16 @@ body {
 #modal p,
 #modal3 p,
 #modal4 p,
-#modal5 p {
+#modal5 p,
+#modal6 p,
+#modal7 p,
+#modal8 p,
+#modal9 p,
+#modal10 p,
+#modal11 p,
+#modal_info p {
   font-size: 2em;
-  width: 98%;
+  width: 95%;
   margin: 0 auto;
   margin-top: 70px;
 }
@@ -100,7 +131,13 @@ body {
 .hval,
 .hval3,
 .hval4,
-.hval5 {
+.hval5,
+.hval6,
+.hval7,
+.hval8,
+.hval9,
+.hval10,
+.hval11 {
   background-image: url(hval-01.svg);
   background-size: 100% 100%;
   position: absolute;
@@ -116,20 +153,70 @@ body {
   border: none;
   background-color: transparent;
   font-size: 2.2em;
+  cursor: pointer;
 }
 
 #modal.vis,
 #modal3.vis3,
 #modal4.vis4,
-#modal5.vis5 {
+#modal5.vis5,
+#modal6.vis6,
+#modal7.vis7,
+#modal8.vis8,
+#modal9.vis9,
+#modal10.vis10,
+#modal11.vis11,
+#modal_info.visinfo {
   display: block;
   transition: 0.5s;
   pointer-events: all;
+  font-family: "Lato", sans-serif;
 }
 
-#booble2:hover {
+#boble2:hover,
+#boble3:hover,
+#boble4:hover,
+#boble5:hover,
+#boble6:hover,
+#boble7:hover,
+#boble8:hover,
+#boble9:hover,
+#boble10:hover,
+#boble11:hover,
+#bobble:hover {
+  transform: scale(1.002);
+}
+
+#modal_info p {
+  margin-top: 45px;
+}
+/* .p {
+  margin-block-start: 0em;
+}
+
+.pp {
+  margin-block-end: 0em;
+} */
+
+/* 
+.cls47:hover {
+  stroke: red;
+  fill: red;
+  color: red;
+}
+
+.cls-50:hover {
+  fill: red;
+}
+.cls-48:hover {
+  fill: red;
   stroke: red;
 }
+
+.cls-49:hover {
+  stroke: red;
+  fill: red;
+} */
 
 #booble2,
 #boble3,
@@ -221,6 +308,24 @@ body {
 
   to {
     transform: translateY(2150px);
+  }
+}
+
+#plastikpose {
+  animation-name: pose;
+  animation-duration: 45s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes pose {
+  from {
+    transform: translateY(0px);
+  }
+
+  to {
+    transform: translateY(2200px);
   }
 }
 
@@ -321,22 +426,6 @@ body {
   100% {
     transform: translateX(1000px);
   }
-
-  /* 25% {
-    transform: translateY(220px) translateX(10px);
-  }
-
-  50% {
-    transform: translateY(-20px) translateX(30px);
-  }
-
-  75% {
-    transform: translateY(220px) translateX(700px);
-  }
-
-  100% {
-    transform: translateY(10px) translateX(900px);
-  } */
 }
 
 i {
