animationer og scroll effekt

--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ html {
   scroll-behavior: smooth;
 }
 
-/* .scroller {
-  height: 900px;
+.scroller {
+  height: 56.25vw;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
   position: relative;
@@ -26,12 +26,16 @@ html {
   z-index: 2;
 }
 
+#sections {
+  pointer-events: none;
+}
+
 .scroller section {
   scroll-snap-align: start;
   position: relative;
   z-index: 3;
-  outline: 3px dashed orange;
-  height: 900px;
+  border-bottom: 2px solid red;
+  height: 56.25vw;
   width: 100%;
 }
 
@@ -49,7 +53,7 @@ html {
 
 .scroller #boble9 {
   scroll-snap-align: start;
-} */
+}
 
 /* MODAL VINDUE */
 
@@ -57,16 +61,16 @@ html {
 #modal3,
 #modal4,
 #modal_info {
-  width: 600px;
-  height: 400px;
+  width: 37.5vw;
+  height: 25vw;
   z-index: 19;
   text-align: center;
   position: absolute;
   display: none;
-  top: 400px;
+  top: 25vw;
   left: 55%;
   background-color: white;
-  transition: 1s;
+  transition: width 2s, height 2s, transform 2s;
   pointer-events: none;
 }
 
@@ -74,13 +78,13 @@ html {
 #modal6,
 #modal7,
 #modal8 {
-  width: 600px;
-  height: 400px;
+  width: 37.5vw;
+  height: 25vw;
   z-index: 19;
   text-align: center;
   position: absolute;
   display: none;
-  top: 1140px;
+  top: 71.25vw;
   left: 55%;
   background-color: white;
   transition: 1s;
@@ -90,13 +94,13 @@ html {
 #modal9,
 #modal10,
 #modal11 {
-  width: 600px;
-  height: 400px;
+  width: 37.5vw;
+  height: 25vw;
   z-index: 19;
   text-align: center;
   position: absolute;
   display: none;
-  top: 1940px;
+  top: 121.24999999999999vw;
   left: 55%;
   background-color: white;
   transition: 1s;
@@ -168,7 +172,7 @@ html {
 #modal11.vis11,
 #modal_info.visinfo {
   display: block;
-  transition: 0.5s;
+  transition: width 2s, height 2s, transform 2s;
   pointer-events: all;
   font-family: "Lato", sans-serif;
 }
@@ -182,41 +186,29 @@ html {
 #boble8:hover,
 #boble9:hover,
 #boble10:hover,
-#boble11:hover,
-#bobble:hover {
-  transform: scale(1.002);
+#boble11:hover {
+  animation-name: puls;
+  animation-duration: 1s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  transform-origin: 10% 60%;
+  transform-box: fill-box;
+  cursor: pointer;
+}
+
+@keyframes puls {
+  from {
+    transform: scale(1);
+  }
+
+  to {
+    transform: scale(1.04);
+  }
 }
 
 #modal_info p {
   margin-top: 45px;
 }
-/* .p {
-  margin-block-start: 0em;
-}
-
-.pp {
-  margin-block-end: 0em;
-} */
-
-/* 
-.cls47:hover {
-  stroke: red;
-  fill: red;
-  color: red;
-}
-
-.cls-50:hover {
-  fill: red;
-}
-.cls-48:hover {
-  fill: red;
-  stroke: red;
-}
-
-.cls-49:hover {
-  stroke: red;
-  fill: red;
-} */
 
 #booble2,
 #boble3,
@@ -313,15 +305,48 @@ html {
 
 #plastikpose {
   animation-name: pose;
-  animation-duration: 45s;
+  animation-duration: 60s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
 }
 
 @keyframes pose {
   from {
-    transform: translateY(0px);
+    transform: translateY(100px);
+  }
+
+  to {
+    transform: translateY(2200px);
+  }
+}
+
+#plastik1 {
+  animation-name: plastikkop;
+  animation-duration: 55s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes plastikkop {
+  from {
+    transform: translateY(200px);
+  }
+
+  to {
+    transform: translateY(2200px);
+  }
+}
+
+#flydendevatpind {
+  animation-name: vatpind;
+  animation-duration: 48s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes vatpind {
+  from {
+    transform: translateY(75px);
   }
 
   to {
@@ -334,6 +359,7 @@ html {
   animation-name: stråle4;
   animation-duration: 3s;
   animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 @keyframes stråle4 {
@@ -352,6 +378,7 @@ html {
   animation-duration: 5s;
   animation-iteration-count: infinite;
   animation-delay: 2s;
+  animation-direction: alternate;
 }
 
 @keyframes stråle3 {
@@ -365,9 +392,12 @@ html {
 }
 
 #bobble {
-  animation-name: inf;
-  animation-duration: 4s;
+  animation-name: info;
+  animation-duration: 1s;
   animation-iteration-count: infinite;
+  transform-origin: center center;
+  transform-box: fill-box;
+  animation-direction: alternate;
 }
 
 @keyframes info {
@@ -431,15 +461,71 @@ html {
 i {
   position: absolute;
   top: 800px;
-  left: 800px;
+  left: 50vw;
   font-size: 50px;
   color: white;
+  z-index: 700;
 }
 
 #pil {
   position: absolute;
   top: 1700px;
-  left: 800px;
+  left: 50vw;
   font-size: 50px;
   color: white;
+  z-index: 700;
+}
+
+#fisk {
+  animation-name: fisk;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-out;
+}
+
+@keyframes fisk {
+  0% {
+    transform: translateX(700px);
+  }
+
+  100% {
+    transform: translateX(-1200px);
+  }
+}
+
+#stjerne {
+  animation-name: stjerne;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+  transform-box: fill-box;
+}
+
+@keyframes stjerne {
+  0% {
+    transform: rotate(30deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+#storskilpadde {
+  animation-name: storpadde;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+
+  animation-direction: alternate;
+}
+
+@keyframes storpadde {
+  0% {
+    transform: translateX(0px);
+  }
+
+  100% {
+    transform: translateX(50px);
+  }
 }
